# Introduction_to_Operating_Systems_Coursework

./: README.md
Homework/h1/: README.md
Homework/h1/src/: ex4.sh
Homework/h2/: README.md
Homework/h3/: README.md
Homework/h3/ex2/: ex2.c  linked_list.c  linked_list.h
Homework/h3/src/: ex2.c  linked_list.c  linked_list.h
Homework/h4/: README.md
Homework/h4/src/: counter.sh  counter_modified.sh  ex3.c
Homework/h5/: README.md
Homework/h6/: README.md
Homework/h6/src/: ex4.c
Homework/h7/: README.md  test.py
Homework/h8/: README.md
Labs/l1/: README.md
Labs/l1/src/: Number_Guessing_Game.sh
Labs/l10/: README.md
Labs/l11/: README.md
Labs/l2/: README.md
Labs/l3/: README.md
Labs/l4/: README.md
Labs/l5/: README.md
Labs/l5/ex3/: lab5_dlist.c  lab5_dlist.h
Labs/l5/src/: files.c  files.h  linked_list.c  linked_list.h  main.c  main_cli.c  main_menu.c  ui.h
Labs/l6/: README.md
Labs/l7/: README.md
Labs/l8/: README.md
Labs/l9/: README.md
Labs/l9/src/: Makefile  dice.c
Projects/: Makefile  built_in.h  error_handler.c  error_handler.h  main.c  parser.c
Projects/p1/: CHANGELOG.md  Makefile  README.md  built_in.c  parser.h  utility.c  utility.h
Projects/p1/include/: built_in.h  error_handler.h  parser.h  utility.h
Projects/p1/src/: built_in.c  error_handler.c  main.c  parser.c  utility.c
Projects/p2/: CHANGELOG.md  CMakeLists.txt  README.md
Projects/p2/src/: main.cpp
Projects/p2/src/db/: Database.cpp  Database.h  Table.cpp  Table.h
Projects/p2/src/query/: Query.cpp  Query.h  QueryBuilders.cpp  QueryBuilders.h  QueryParser.cpp  QueryParser.h  QueryResult.cpp  QueryResult.h  scheduler.cpp  scheduler.h  scheduler_helper.hpp
Projects/p2/src/query/data/: CopyTableQuery.cpp  CopyTableQuery.h  DeleteQuery.cpp  DeleteQuery.h  DuplicateQuery.cpp  DuplicateQuery.h  InsertQuery.cpp  InsertQuery.h  MaxQuery.cpp  MaxQuery.h  SelectQuery.cpp  SelectQuery.h  SubQuery.cpp  SubQuery.h  SumQuery.cpp  SumQuery.h  SwapQuery.cpp  SwapQuery.h  TruncateQuery.cpp  TruncateQuery.h  UpdateQuery.cpp  UpdateQuery.h
Projects/p2/src/query/management/: DropTableQuery.cpp  DropTableQuery.h  DumpTableQuery.cpp  DumpTableQuery.h  ListTableQuery.cpp  ListTableQuery.h  LoadTableQuery.cpp  LoadTableQuery.h  PrintTableQuery.cpp  PrintTableQuery.h  QuitQuery.cpp  QuitQuery.h
Projects/p2/src/utils/: formatter.h  uexception.h
Projects/p2/test/: README.md  run.sh
Projects/p3/: Changelog.md  Makefile  README.md  runner.sh
Projects/p3/ebpf/: sched_trace.bpf.c
Projects/p3/tests/: cpu_task.c
Projects/p3/userspace/: clients.py  lottery.py  spawn_tasks.py
